--- a/ee/app/views/admin/application_settings/_add_license.html.haml
+++ b/ee/app/views/admin/application_settings/_add_license.html.haml
@@ -39,7 +39,7 @@
           value: nil,
           checked: false,
           checkbox_options: { data: { qa_selector: 'accept_eula_checkbox'} }) do |c|
-          = c.label do
+          - c.with_label do
             = _('Unless otherwise agreed to in writing with GitLab, by clicking "Upload License" you agree that your use of GitLab Software is subject to the %{eula_link_start}Terms of Service%{eula_link_end}.').html_safe % { eula_link_start: eula_link_start, eula_url: eula_url, eula_link_end: '</a>'.html_safe }
       .form-actions
         = f.submit _('Add license'), pajamas_button: true, data: { qa_selector: 'license_upload_button' }, disabled: true
