Add anchor for code suggestions alert
- allow exact finding of the setting on the users profile

--- a/ee/app/views/profiles/preferences/_code_suggestions_settings.html.haml
+++ b/ee/app/views/profiles/preferences/_code_suggestions_settings.html.haml
@@ -5,7 +5,7 @@
 - terms_link_start = '<a href="https://about.gitlab.com/handbook/legal/testing-agreement/" target="_blank" rel="noopener noreferrer">'.html_safe
 
 .row.js-preferences-form.js-search-settings-section
-  .col-sm-12
+  .col-sm-12#code-suggestions-settings
     %hr
   .col-lg-4.profile-settings-sidebar
     %h4.gl-mt-0
