--- a/ee/app/views/trials/select_namespace_form.html.haml
+++ b/ee/app/views/trials/select_namespace_form.html.haml
@@ -16,7 +16,7 @@
 
     = form_tag trials_path(**glm_params, step: GitlabSubscriptions::Trials::CreateService::TRIAL), method: :post, class: 'js-saas-trial-group', data: { testid: 'trial-form' } do
       .js-namespace-selector{ data: { any_trial_eligible_namespaces: any_trial_eligible_namespaces?.to_s, new_group_name: params[:new_group_name],
-        items: namespace_options_for_listbox.to_json, initial_value: params[:namespace_id] } }
+        items: namespace_options_for_listbox.to_json, initial_value: params[:namespace_id], hide_namespace_selector: @hide_namespace_selector.to_s } }
       - if should_ask_company_question?
         .form-group
           = label_tag :trial_entity, _('Who will be using GitLab?')
