Fix scoped roadmap loading error and layout
Fixes bug around scope roadmap (view which opens from within an Epic)
where loading the view caused JS error, also fixes a bug where height
was calculated incorrectly.

EE: true
Changelog: fixed

--- a/ee/app/assets/stylesheets/components/related_items_tree.scss
+++ b/ee/app/assets/stylesheets/components/related_items_tree.scss
@@ -72,22 +72,8 @@
 }
 
 .related-items-tree-container {
-  .roadmap-app-container {
-    .js-roadmap-shell {
-      border-radius: $gl-border-radius-base;
-    }
-
-    .epics-list-item-empty {
-      display: none;
-    }
-
-    // This is a hacky CSS to remove the border-bottom from the
-    // last list in the roadmap.
-    .epic-item-container:nth-last-child(4) {
-      .epic-details-cell,
-      .epic-timeline-cell {
-        border-bottom: 0;
-      }
-    }
+  .roadmap-app {
+    min-height: 600px;
+    height: 50vh;
   }
 }
