Remove dismiss button for storage alerts that require user attention

--- a/ee/app/components/namespaces/storage/limit_alert_component.html.haml
+++ b/ee/app/components/namespaces/storage/limit_alert_component.html.haml
@@ -1,6 +1,6 @@
 .gl-mt-3.container-fluid{ class: content_class }
   = render Pajamas::AlertComponent.new(variant: alert_variant,
-    dismissible: true,
+    dismissible: dismissible?,
     title: alert_title,
     alert_options: { class: 'js-namespace-storage-alert',
                     data: { feature_id: callout_feature_name,
