--- a/ee/app/views/namespaces/_additional_minutes_status.html.haml
+++ b/ee/app/views/namespaces/_additional_minutes_status.html.haml
@@ -8,6 +8,6 @@
 
 - if minutes_usage_presenter.display_shared_runners_data?
   %li
-    %span.light= _('Additional minutes:')
+    %span.light= _('Additional units of compute:')
     %strong
       = ci_minutes_report(minutes_usage_presenter.purchased_minutes_report)
