--- a/ee/app/views/namespaces/_shared_runner_status.html.haml
+++ b/ee/app/views/namespaces/_shared_runner_status.html.haml
@@ -4,7 +4,7 @@
 
 - if minutes_usage_presenter.display_shared_runners_data?
   %li
-    %span.light= _('Quota of CI/CD minutes:')
+    %span.light= _('Compute quota:')
     %strong
       = ci_minutes_report(minutes_usage_presenter.monthly_minutes_report)
       = link_to sprite_icon('question-o', css_class: 'gl-text-blue-500'), help_page_path('ci/pipelines/cicd_minutes'), target: '_blank', rel: 'noopener noreferrer'
