--- a/ee/app/views/groups/security/compliance_dashboards/show.html.haml
+++ b/ee/app/views/groups/security/compliance_dashboards/show.html.haml
@@ -9,4 +9,5 @@
   root_ancestor_path: @group.root_ancestor.full_path,
   pipeline_configuration_full_path_enabled: can?(current_user, :admin_compliance_pipeline_configuration, @group),
   base_path: group_security_compliance_dashboard_path(@group),
-  pipeline_configuration_enabled: @group.licensed_feature_available?(:compliance_pipeline_configuration).to_s } }
+  pipeline_configuration_enabled: @group.licensed_feature_available?(:compliance_pipeline_configuration).to_s,
+  adherence_report_ui_enabled: Feature.enabled?(:adherence_report_ui).to_s } }
