Move Trials Controller under the "ee/app/controllers/subscriptions" path

--- a/ee/app/views/profiles/billings/_billing_plan_header.html.haml
+++ b/ee/app/views/profiles/billings/_billing_plan_header.html.haml
@@ -1,4 +1,4 @@
-= render 'trials/alert', namespace: namespace
+= render 'subscriptions/trials/alert', namespace: namespace
 
 .billing-plan-header.content-block.gl-text-center
   .billing-plan-logo
