--- a/ee/app/views/shared/_code_suggestions_alert.html.haml
+++ b/ee/app/views/shared/_code_suggestions_alert.html.haml
@@ -9,7 +9,7 @@
         - preference_link_start = '<a href="%{url}">'.html_safe % { url: profile_preferences_path(anchor: 'code-suggestions-settings') }
         - docs_link_start = '<a href="%{url}">'.html_safe % { url: help_page_path('user/project/repository/code_suggestions', anchor: 'enable-code-suggestions-in-vs-code') }
         - link_end = '</a>'.html_safe
-        = s_("CodeSuggestionsAlert|Code faster and more efficiently with AI-powered code suggestions in VS Code. 13 languages are supported, including Javascript, Python, Go, Java, and Kotlin. Enable Code Suggestions in your %{preference_link_start}user profile preferences%{link_end} or %{docs_link_start}see the documentation%{link_end} to learn more.").html_safe % { preference_link_start: preference_link_start,
+        = s_("CodeSuggestionsAlert|Code faster and more efficiently with AI-powered code suggestions in VS Code. 13 languages are supported, including JavaScript, Python, Go, Java, and Kotlin. Enable Code Suggestions in your %{preference_link_start}user profile preferences%{link_end} or %{docs_link_start}see the documentation%{link_end} to learn more.").html_safe % { preference_link_start: preference_link_start,
           docs_link_start: docs_link_start, link_end: link_end }
       - c.with_actions do
         = render Pajamas::ButtonComponent.new(href: profile_preferences_path(anchor: 'code-suggestions-settings'), variant: :confirm) do
