--- a/ee/app/views/compliance_management/compliance_framework/_project_settings.html.haml
+++ b/ee/app/views/compliance_management/compliance_framework/_project_settings.html.haml
@@ -6,9 +6,9 @@
 - namespace_doc_link = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: help_page_path('user/namespace/index.md', anchor: 'types-of-namespaces') }
 
 - if @project.personal?
-  %section.settings.compliance-framework.no-animate#js-compliance-framework{ class: ('expanded' if expanded) }
+  %section.settings.compliance-framework.no-animate#js-compliance-framework
     .settings-header
-      %h4.settings-title.js-settings-toggle.js-settings-toggle-trigger-only= _('Compliance framework')
+      %h4= _('Compliance framework')
       %p= html_escape(_('Frameworks can not be added to projects in personal namespaces. %{linkStart}What are personal namespaces?%{linkEnd}')) % { linkStart: namespace_doc_link, linkEnd: '</a>'.html_safe }
     .settings-content
 - else
