--- a/ee/app/views/projects/_merge_requests_suggested_reviewers_form.html.haml
+++ b/ee/app/views/projects/_merge_requests_suggested_reviewers_form.html.haml
@@ -2,4 +2,4 @@
   .form-group
     = f.fields_for :project_setting do |settings|
       = settings.gitlab_ui_checkbox_component :suggested_reviewers_enabled, s_('ProjectSettings|Enable suggested reviewers'), help_text: s_('SuggestedReviewers|Suggestions appear in the Reviewer section of the right sidebar')
-  = f.submit _('Save changes'), class: "btn gl-button btn-confirm"
+  = f.submit _('Save changes'), pajamas_button: true
