--- a/ee/app/views/subscriptions/trials/_lead_form.html.haml
+++ b/ee/app/views/subscriptions/trials/_lead_form.html.haml
@@ -10,7 +10,7 @@
     %p.gl-text-gray-700.gl-font-lg
       = s_('Trial|Your GitLab Ultimate trial lasts for 30 days, but you can keep your free GitLab account forever. We just need some additional information to activate your trial.')
 
-    .js-error-alert{ data: { errors: @create_errors } }
+    = yield :before_form
 
     #js-trial-create-lead-form{ data: create_lead_form_data }
 
