Fix 'targe' typo in field name
Let's swap "Targe" for "Target" in the UI

--- a/ee/app/views/projects/settings/merge_requests/_target_branch_rules_settings.html.haml
+++ b/ee/app/views/projects/settings/merge_requests/_target_branch_rules_settings.html.haml
@@ -29,7 +29,7 @@
                 .col-sm-6
                   = f.text_field :name, class: 'form-control gl-form-input', placeholder: _('eg. dev/*')
               .form-group.row
-                = f.label :target_branch, _("Targe branch"), class: 'col-sm-12'
+                = f.label :target_branch, _("Target branch"), class: 'col-sm-12'
                 .col-sm-6
                   = f.hidden_field :target_branch
                   #js-target-branch{ data: { project_id: @project.id } }
