Move labels.scss to page_bundles from page_specific_bundles
Changelog: changed

--- a/ee/app/views/groups/epics/new.html.haml
+++ b/ee/app/views/groups/epics/new.html.haml
@@ -3,5 +3,6 @@
 - breadcrumb_title _("New")
 - page_title _("New epic")
 - add_page_specific_style 'page_bundles/epics'
+- add_page_specific_style 'page_bundles/labels'
 
 .js-epic-new{ data: epic_new_app_data(@group) }
