--- a/ee/app/views/groups/epics/show.html.haml
+++ b/ee/app/views/groups/epics/show.html.haml
@@ -23,6 +23,7 @@
 - add_page_specific_style 'page_bundles/issues_show'
 - add_page_specific_style 'page_bundles/roadmap'
 - add_page_specific_style 'page_bundles/issuable'
+- add_page_specific_style 'page_bundles/labels'
 
 - add_page_startup_api_call discussions_path(@epic)
 - add_page_startup_graphql_call('epic/epic_details', { fullPath: @group.full_path, iid: @epic.iid })
