--- a/ee/app/views/trial_registrations/_signup_omniauth_provider_list.haml
+++ b/ee/app/views/trial_registrations/_signup_omniauth_provider_list.haml
@@ -1,6 +1,6 @@
 = render 'devise/shared/signup_omniauth_provider_list',
   providers: popular_enabled_button_based_providers,
   trial: true,
-  tracking_label: ::Onboarding::Status.tracking_label[:trial]
+  tracking_label: ::Onboarding::Status::TRACKING_LABEL[:trial]
 .omniauth-divider.gl-display-flex.gl-align-items-center
   = _("or")
