Update diff summary on todos to be truncated
Adds anchor to target link so that it auto expands summary
on merge requests.

https://gitlab.com/gitlab-org/gitlab/-/issues/423320

--- a/ee/app/views/dashboard/todos/_diff_summary.html.haml
+++ b/ee/app/views/dashboard/todos/_diff_summary.html.haml
@@ -4,4 +4,4 @@
   - merge_request = todo.target
   - diff_llm_summary = diff_llm_summary(merge_request)
   - if summarize_llm_enabled?(merge_request.project, current_user) && diff_llm_summary.present?
-    = render 'llm_summary', local_assigns: { content: diff_llm_summary.content }
+    = render 'llm_summary', local_assigns: { content: truncated_diff_llm_summary(merge_request) }
