--- a/ee/app/views/registrations/welcome/_joining_project.html.haml
+++ b/ee/app/views/registrations/welcome/_joining_project.html.haml
@@ -7,13 +7,13 @@
     = label_tag :joining_project, _('What would you like to do?'), class: 'label-bold'
     .form-check.gl-mb-2
       = radio_button_tag :joining_project, false, false, required: true, class: 'form-check-input'
-      = label_tag :joining_project_false, class: 'form-check-label normal', data: { qa_selector: 'create_a_new_project_radio'} do
+      = label_tag :joining_project_false, class: 'form-check-label normal', data: { testid: 'create-a-new-project-radio'} do
         = _('Create a new project')
         .form-text.gl-text-gray-600
           = _('Store your files, plan your work, collaborate on code, and more.')
     .form-check
       = radio_button_tag :joining_project, true, false, required: true, class: 'form-check-input'
-      = label_tag :joining_project_true, class: 'form-check-label normal', data: { qa_selector: 'joining_project_true_radio'} do
+      = label_tag :joining_project_true, class: 'form-check-label normal' do
         = _('Join a project')
         .form-text.gl-text-gray-600
           = _('Join your team on GitLab and contribute to an existing project')
